--- a/craft_customer/templates/cust_dining.html
+++ b/craft_customer/templates/cust_dining.html
@@ -46,7 +46,7 @@
             <div class="card" style="width: 300px;">
               <img src="{% static 'images/spicebox.PNG' %}"  height="350px"   class="card-img-top" alt="...">
               <div class="card-body" >
-                <a href="{% url 'dining_spicebox' %}" class="card-title" style="color:black;"><label for="">"Twelve Blends" Spice Box With 12 Containers
+                <a href="{% url 'cust_diningspice' %}" class="card-title" style="color:black;"><label for="">"Twelve Blends" Spice Box With 12 Containers
                   & Spoon In Sheesham Wood
                   <br><span>
                     <font size="5">Rs:1000.00</font>
@@ -59,7 +59,7 @@
             <div class="card"style="width: 300px;">
               <img src="{% static 'images/dining1.PNG' %}"  height="350px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="{% url 'dining_mugs' %}" class="card-title" style="color:black;"><label for="">'Blues Of Sky' Studio Pottery
+                <a href="{% url 'cust_diningmugs' %}" class="card-title" style="color:black;"><label for="">'Blues Of Sky' Studio Pottery
                   <br>Glazed Coffee Mugs In <br> Ceramic (Set Of 2)<br> <span>
                     <font size="5">Rs:650.00</font>
                   </span></label></a>
@@ -83,7 +83,7 @@
             <div class="card"style="width: 300px;">
               <img src="{% static 'images/dining2.PNG' %}"  height="350px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="{% url 'dining_jar' %}" class="card-title" style="color:black;"><label for="">'Old Fashioned Martaban'
+                <a href="{% url 'cust_diningjar' %}" class="card-title" style="color:black;"><label for="">'Old Fashioned Martaban'
                   Ceramic Chutney & Pickle Jar Set With Tray<br> (Set of 2, 225 ML)<br><span>
                     <font size="5">Rs:1,095.00</font>
                   </span></label></a>
@@ -99,7 +99,7 @@
     
       <div class="col mb-4">
           <div class="card" style="width: 300px;">
-            <img src="{% static 'images/spicebox.PNG' %}"  height="350px"   class="card-img-top" alt="...">
+            <img src="{% static 'images/dining3.PNG' %}"  height="350px"   class="card-img-top" alt="...">
             <div class="card-body" >
               <a href="{% url 'dining_spicebox' %}" class="card-title" style="color:black;"><label for="">"Twelve Blends" Spice Box With 12 Containers
                 & Spoon In Sheesham Wood
@@ -112,7 +112,7 @@
 
         <div class="col mb-4">
           <div class="card"style="width: 300px;">
-            <img src="{% static 'images/dining1.PNG' %}"  height="350px" class="card-img-top" alt="...">
+            <img src="{% static 'images/dining4.PNG' %}"  height="350px" class="card-img-top" alt="...">
             <div class="card-body">
               <a href="{% url 'dining_mugs' %}" class="card-title" style="color:black;"><label for="">'Blues Of Sky' Studio Pottery
                 <br>Glazed Coffee Mugs In <br> Ceramic (Set Of 2)<br> <span>
@@ -124,7 +124,7 @@
 
         <div class="col mb-4">
           <div class="card"style="width: 300px;">
-            <img src="{% static 'images/bowl.PNG' %}"  height="370px" class="card-img-top" alt="...">
+            <img src="{% static 'images/dining5.PNG' %}"  height="370px" class="card-img-top" alt="...">
             <div class="card-body">
               <a href="{% url 'dining_bowls' %}" class="card-title" style="color:black;"><label for=""> The Hut Curved Serving
                 Hand-Painted Ceramic Bowls (Set Of 2)<br><span>
@@ -136,7 +136,7 @@
 
         <div class="col mb-4">
           <div class="card"style="width: 300px;">
-            <img src="{% static 'images/dining2.PNG' %}"  height="350px" class="card-img-top" alt="...">
+            <img src="{% static 'images/dining6.PNG' %}"  height="350px" class="card-img-top" alt="...">
             <div class="card-body">
               <a href="{% url 'dining_jar' %}" class="card-title" style="color:black;"><label for="">'Old Fashioned Martaban'
                 Ceramic Chutney & Pickle Jar Set With Tray<br> (Set of 2, 225 ML)<br><span>
@@ -169,7 +169,7 @@
           <div class="card"style="width: 300px;">
             <img src="{% static 'images/dining1.PNG' %}"  height="350px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="{% url 'dining_mugs' %}" class="card-title" style="color:black;"><label for="">'Blues Of Sky' Studio Pottery
+              <a href="{% url 'cust_diningmugs' %}" class="card-title" style="color:black;"><label for="">'Blues Of Sky' Studio Pottery
                 <br>Glazed Coffee Mugs In <br> Ceramic (Set Of 2)<br> <span>
                   <font size="5">Rs:650.00</font>
                 </span></label></a>
