--- a/craft_shop/templates/dress.html
+++ b/craft_shop/templates/dress.html
@@ -46,7 +46,7 @@
   <table border="0" cellpadding="15">
     <tr>
       <td>
-        <h1>All Kitchen & Dining</h1>
+        <h1>Dress</h1>
       </td>
     </tr>
     <tr>
