--- a/craft_shop/templates/cart.html
+++ b/craft_shop/templates/cart.html
@@ -6,7 +6,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>craftshop</title>
+  <title>Cart - Inside Craft shopee</title>
+  <link rel="icon" href="{% static 'images/ilogo.png' %}" type="image/gif" sizes="18x18">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -132,7 +134,7 @@ ul{
     <label for="">Login to see the items you added previously</label>
     <br><br>
     <button class=" btn btn-lg btn-block " type="button" id="cart_log"><a href="{% url 'login' %}"
-        style="color:white;">Login</a></button>
+        style="color:white; text-decoration: none;">Login</a></button>
 
 
   </div>
