--- a/craft_shop/templates/master.html
+++ b/craft_shop/templates/master.html
@@ -6,7 +6,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>craftshop</title>
+  <title> Inside craft shipee - Online Shopping site for handcrafted items</title>
+  <link rel="icon" href="{% static 'images/ilogo.png' %}" type="image/gif" sizes="18x18">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -68,6 +70,7 @@ ul{
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <form class="d-flex">
+            
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
                     style="width: 400px;">
                 <button class="btn btn-outline-success" type="submit" style="background-color:black;">
